force-app/main/default/objects/Event_Details__c/Event_Details__c.object-meta.xml
<CustomObject>
    <description>Details related to a specific FamilyLife Event</description>
    <label>Event Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>