force-app/main/default/objects/Event_Details__c/fields/Additional_PU_Fri__c.field-meta.xml
<CustomField>
    <fullName>Additional_PU_Fri__c</fullName>
    <label>Additional PU Fri</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>