force-app/main/default/objects/Event_Details__c/fields/Additional_PU_Sat__c.field-meta.xml
<CustomField>
    <fullName>Additional_PU_Sat__c</fullName>
    <label>Additional PU Sat</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>