force-app/main/default/objects/Event_Details__c/fields/Address_1_B__c.field-meta.xml
<CustomField>
    <fullName>Address_1_B__c</fullName>
    <description>Part of address 1 which will be populated as address Primary Shipping when the Conference Location and Hotel Location are different. System field not exposed on a page layout. Values are set in Event Detail Main Process</description>
    <label>Address 1 B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>