force-app/main/default/objects/Event_Details__c/fields/Address_3_B__c.field-meta.xml
<CustomField>
    <fullName>Address_3_B__c</fullName>
    <label>Address 3 B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>