force-app/main/default/objects/Event_Details__c/fields/Attendance_Actual__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of actual attendees</description>
    <inlineHelpText>How many people attended this event?</inlineHelpText>
    <label>Attendance Actual</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>