force-app/main/default/objects/Event_Details__c/fields/Attendance_Goal__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Goal__c</fullName>
    <description>Attendance Goal for the event</description>
    <inlineHelpText>What is the attendance goal for this event?</inlineHelpText>
    <label>Attendance Goal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>