force-app/main/default/objects/Event_Details__c/fields/Attending__c.field-meta.xml
<CustomField>
    <fullName>Attending__c</fullName>
    <formula>Campaign__r.Actual_Attendance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>