force-app/main/default/objects/Event_Details__c/fields/Aux_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Aux_Address_1__c</fullName>
    <formula>IF(Address_3__c= &quot;&quot;,Null,Address_3__c &amp; BR() &amp; 
IF( Address_3_B__c&lt;&gt;&quot;&quot;,Address_3_B__c &amp; BR(),&quot;&quot;)&amp;
Street_3__c &amp; BR() &amp;
City_3__c &amp; &quot; &quot; &amp;   State_3__c  &amp; &quot;, &quot; &amp;  Zip_Code_3__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aux Address 1</label>
    <type>Text</type>
</CustomField>