force-app/main/default/objects/Event_Details__c/fields/Aux_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Aux_Address_2__c</fullName>
    <formula>IF(Address_4__c=&quot;&quot;,Null,Address_4__c &amp; BR() &amp; 
IF( Address_4_B__c&lt;&gt;&quot;&quot;,Address_4_B__c &amp; BR(),&quot;&quot;)&amp;
Street_4__c &amp; BR() &amp;
City_4__c &amp; &quot; &quot; &amp;   State_4__c  &amp; &quot;, &quot; &amp;  Zip_Code_4__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aux Address 2</label>
    <type>Text</type>
</CustomField>