force-app/main/default/objects/Event_Details__c/fields/AV_Description__c.field-meta.xml
<CustomField>
    <fullName>AV_Description__c</fullName>
    <label>AV Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>