force-app/main/default/objects/Event_Details__c/fields/AV_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Type__c</fullName>
    <label>AV Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>