force-app/main/default/objects/Event_Details__c/fields/Blended_Session_Count__c.field-meta.xml
<CustomField>
    <fullName>Blended_Session_Count__c</fullName>
    <label>Blended Session Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>