force-app/main/default/objects/Event_Details__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Details</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>