force-app/main/default/objects/Event_Details__c/fields/Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Members__c</fullName>
    <formula>Campaign__r.NumberOfContacts</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>