force-app/main/default/objects/Event_Details__c/fields/Capacity_Comment__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Comment__c</fullName>
    <label>Capacity Comment</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>