force-app/main/default/objects/Event_Details__c/fields/Check_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Time__c</fullName>
    <label>Check In Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1:00</fullName>
            </value>
            <value>
                <fullName>2:00</fullName>
            </value>
            <value>
                <fullName>3:00</fullName>
            </value>
            <value>
                <fullName>4:00</fullName>
            </value>
            <value>
                <fullName>5:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>