force-app/main/default/objects/Event_Details__c/fields/Check_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Time__c</fullName>
    <label>Check Out Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>11:30</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>12:30</fullName>
            </value>
            <value>
                <fullName>1:00</fullName>
            </value>
            <value>
                <fullName>2:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>