force-app/main/default/objects/Event_Details__c/fields/City_2__c.field-meta.xml
<CustomField>
    <fullName>City_2__c</fullName>
    <label>City 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>