force-app/main/default/objects/Event_Details__c/fields/City_3__c.field-meta.xml
<CustomField>
    <fullName>City_3__c</fullName>
    <label>City 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>