force-app/main/default/objects/Event_Details__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Community</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>