force-app/main/default/objects/Event_Details__c/fields/Commuter_Parking__c.field-meta.xml
<CustomField>
    <fullName>Commuter_Parking__c</fullName>
    <label>Commuter Parking</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>