force-app/main/default/objects/Event_Details__c/fields/Comp_Div__c.field-meta.xml
<CustomField>
    <fullName>Comp_Div__c</fullName>
    <defaultValue>0.8</defaultValue>
    <label>% No Attrition</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>