force-app/main/default/objects/Event_Details__c/fields/Comp_Needed__c.field-meta.xml
<CustomField>
    <fullName>Comp_Needed__c</fullName>
    <formula>Total_Reserved__c  * Comp_Div__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Attr Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>