force-app/main/default/objects/Event_Details__c/fields/Comp_Rooms_1__c.field-meta.xml
<CustomField>
    <fullName>Comp_Rooms_1__c</fullName>
    <label>Comp Rooms 1/</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>