force-app/main/default/objects/Event_Details__c/fields/Concierge__c.field-meta.xml
<CustomField>
    <fullName>Concierge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concierge</label>
    <type>Checkbox</type>
</CustomField>