force-app/main/default/objects/Event_Details__c/fields/Conference_Location__c.field-meta.xml
<CustomField>
    <fullName>Conference_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account record that holds the physical location of the event</description>
    <inlineHelpText>Account Business that is specific to the actual conference location. So a convention center, resort or venue</inlineHelpText>
    <label>Event Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>012i0000000xEz5AAE</value>
        </filterItems>
        <infoMessage>Choose the Account of the Conference Location</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Details (Conference Location)</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>