force-app/main/default/objects/Event_Details__c/fields/Conference_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Conference_Location_Name__c</fullName>
    <formula>Conference_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference Location Name</label>
    <type>Text</type>
</CustomField>