force-app/main/default/objects/Event_Details__c/fields/Conference_Phone__c.field-meta.xml
<CustomField>
    <fullName>Conference_Phone__c</fullName>
    <label>Event Contact Phone</label>
    <type>Phone</type>
</CustomField>