force-app/main/default/objects/Event_Details__c/fields/Conference_Venue_Type__c.field-meta.xml
<CustomField>
    <fullName>Conference_Venue_Type__c</fullName>
    <formula>Text(Conference_Location__r.Type )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conference Venue Type</label>
    <type>Text</type>
</CustomField>