force-app/main/default/objects/Event_Details__c/fields/Confrence_Hotel_Same__c.field-meta.xml
<CustomField>
    <fullName>Confrence_Hotel_Same__c</fullName>
    <formula>IF(ISNULL(Hotel_Location__c),TRUE,IF(Conference_Location__c =  Hotel_Location__c, TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confrence Hotel Same</label>
    <type>Checkbox</type>
</CustomField>