force-app/main/default/objects/Event_Details__c/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Counter</label>
    <type>AutoNumber</type>
</CustomField>