force-app/main/default/objects/Event_Details__c/fields/Cru_Source__c.field-meta.xml
<CustomField>
    <fullName>Cru_Source__c</fullName>
    <label>Cru Source</label>
    <length>6</length>
    <type>Text</type>
</CustomField>