force-app/main/default/objects/Event_Details__c/fields/CV_Status__c.field-meta.xml
<CustomField>
    <fullName>CV_Status__c</fullName>
    <label>CV Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>