force-app/main/default/objects/Event_Details__c/fields/Cvent_Site__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Site__c</fullName>
    <inlineHelpText>When the source is Cvent, this link is passed to WordPress for landing pages.</inlineHelpText>
    <label>Cvent Site</label>
    <type>Url</type>
</CustomField>