force-app/main/default/objects/Event_Details__c/fields/Cvent_Source__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Source__c</fullName>
    <label>Cvent Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>