force-app/main/default/objects/Event_Details__c/fields/Daytime_Phone__c.field-meta.xml
<CustomField>
    <fullName>Daytime_Phone__c</fullName>
    <label>Daytime Phone</label>
    <type>Phone</type>
</CustomField>