force-app/main/default/objects/Event_Details__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Plain language Event name</description>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>