force-app/main/default/objects/Event_Details__c/fields/Discounted_Price__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Price__c</fullName>
    <label>Discounted Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>