force-app/main/default/objects/Event_Details__c/fields/Divisional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Divisional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divisional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Event_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>