force-app/main/default/objects/Event_Details__c/fields/Doc_Hours__c.field-meta.xml
<CustomField>
    <fullName>Doc_Hours__c</fullName>
    <label>Doc Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>