force-app/main/default/objects/Event_Details__c/fields/Earliest_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Delivery_Date__c</fullName>
    <label>Earliest Delivery Date</label>
    <type>Date</type>
</CustomField>