force-app/main/default/objects/Event_Details__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Event End Date</description>
    <inlineHelpText>What date does this event end?</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>