force-app/main/default/objects/Event_Details__c/fields/ERT_Site__c.field-meta.xml
<CustomField>
    <fullName>ERT_Site__c</fullName>
    <description>This holds the Registration site for an Event in ERT.</description>
    <inlineHelpText>This link should come from ERT.</inlineHelpText>
    <label>ERT Site</label>
    <type>Url</type>
</CustomField>