force-app/main/default/objects/Event_Details__c/fields/Estimated_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Attendance__c</fullName>
    <inlineHelpText>Estimated attendance set by the Event Planner</inlineHelpText>
    <label>Estimated Attendance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>