force-app/main/default/objects/Event_Details__c/fields/EV_Group_Goal__c.field-meta.xml
<CustomField>
    <fullName>EV_Group_Goal__c</fullName>
    <label>EV Group Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>