force-app/main/default/objects/Event_Details__c/fields/Evals__c.field-meta.xml
<CustomField>
    <fullName>Evals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Evals</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>