force-app/main/default/objects/Event_Details__c/fields/Event_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Area_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event Area Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Area_Code__c.Type__c</field>
            <operation>equals</operation>
            <value>Area</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>Event Details</relationshipLabel>
    <relationshipName>Event_Details</relationshipName>
    <type>Lookup</type>
</CustomField>