force-app/main/default/objects/Event_Details__c/fields/Event_Fax__c.field-meta.xml
<CustomField>
    <fullName>Event_Fax__c</fullName>
    <label>Event Fax</label>
    <type>Phone</type>
</CustomField>