force-app/main/default/objects/Event_Details__c/fields/Event_Geo__c.field-meta.xml
<CustomField>
    <fullName>Event_Geo__c</fullName>
    <description>For ERT</description>
    <inlineHelpText>Vital piece of information for proper execution of WordPress Map and Landing Pages. Event Surveys, Event Check in.
To set, use google maps to find the latitude and longitude of the conference location.</inlineHelpText>
    <label>Event Geo</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>