force-app/main/default/objects/Event_Details__c/fields/Event_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Event_Lookup__c</fullName>
    <formula>Name &amp;&quot; &quot; &amp; TEXT( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Lookup</label>
    <type>Text</type>
</CustomField>