force-app/main/default/objects/Event_Details__c/fields/Event_Territory__c.field-meta.xml
<CustomField>
    <fullName>Event_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Territory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Event_Area_Code__c.Type__c</field>
            <operation>equals</operation>
            <value>Territory</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>Event Details (Event Territory)</relationshipLabel>
    <relationshipName>Event_Detail_Territory</relationshipName>
    <type>Lookup</type>
</CustomField>