force-app/main/default/objects/Event_Details__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <inlineHelpText>This should be WTR - Weekend to Remember. Currently WTR is the only event type that can fully leverage this object. Blended and Cruises are occasionally used but until they are fully built out, results will vary.</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choose a Type</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
                <label>AMC-Alumni Marriage Conference</label>
            </value>
            <value>
                <fullName>AOM</fullName>
                <label>AOM-Art of Marriage Live</label>
            </value>
            <value>
                <fullName>BFE</fullName>
                <label>BFE-Blended Family Event</label>
            </value>
            <value>
                <fullName>CCC</fullName>
                <label>CCC-Couple Checkup Conference</label>
            </value>
            <value>
                <fullName>CRU</fullName>
                <label>CRU-Cruise - Love Like You Mean It</label>
            </value>
            <value>
                <fullName>DLE</fullName>
                <label>DLE-Donor Live Event</label>
            </value>
            <value>
                <fullName>FCE</fullName>
                <label>FCE-FamilyLife Co-Sponsored Event</label>
            </value>
            <value>
                <fullName>FLS</fullName>
                <label>FLS-FamilyLife Staff</label>
            </value>
            <value>
                <fullName>FLW</fullName>
                <label>FLW-FamilyLife Workshop</label>
            </value>
            <value>
                <fullName>ISD</fullName>
                <label>ISD-I Still Do</label>
            </value>
            <value>
                <fullName>LTR</fullName>
                <label>LTR-Leadership Training</label>
            </value>
            <value>
                <fullName>MMW</fullName>
                <label>MMW-Marriage Ministry Workshop</label>
            </value>
            <value>
                <fullName>MPR</fullName>
                <label>MPR-Ministry Preview</label>
            </value>
            <value>
                <fullName>NFE</fullName>
                <label>NFE-Non-FamilyLife Event</label>
            </value>
            <value>
                <fullName>SPK</fullName>
                <label>SPK-Speaker Retreats</label>
            </value>
            <value>
                <fullName>STO</fullName>
                <label>STO-FamilyLife Store</label>
            </value>
            <value>
                <fullName>WLE</fullName>
                <label>WLE-Women&apos;s Live Event</label>
            </value>
            <value>
                <fullName>WTR</fullName>
                <default>true</default>
                <label>WTR-Weekend to Remember</label>
            </value>
            <value>
                <fullName>YCO</fullName>
                <label>YCO-Your Church and the Orphan (HFO)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>