force-app/main/default/objects/Event_Details__c/fields/Event_Version__c.field-meta.xml
<CustomField>
    <fullName>Event_Version__c</fullName>
    <label>Event Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WTR Next</fullName>
                <default>true</default>
                <label>WTR Next</label>
            </value>
            <value>
                <fullName>WTR Classic</fullName>
            </value>
            <value>
                <fullName>WTR1</fullName>
            </value>
            <value>
                <fullName>WTR2</fullName>
            </value>
            <value>
                <fullName>WTRTEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>