force-app/main/default/objects/Event_Details__c/fields/Event_Week__c.field-meta.xml
<CustomField>
    <fullName>Event_Week__c</fullName>
    <formula>IF(MONTH(Start_Date__c) &gt;= 4,
IF( 
CEILING( (Start_Date__c   - DATE( YEAR( Start_Date__c), 04, 01) + 1) / 7) &gt; 52, 
52, 
CEILING( (Start_Date__c   - DATE( YEAR( Start_Date__c), 04, 01) + 1) / 7) 
),
IF( 
CEILING( (Start_Date__c   - DATE( YEAR( Start_Date__c) - 1, 04, 01) + 1) / 7) &gt; 52, 
52, 
CEILING( (Start_Date__c   - DATE( YEAR( Start_Date__c) - 1, 04, 01) + 1) / 7) 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>