force-app/main/default/objects/Event_Details__c/fields/Event_Year__c.field-meta.xml
<CustomField>
    <fullName>Event_Year__c</fullName>
    <formula>Right(Text(Year(Start_Date__c )),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Year</label>
    <type>Text</type>
</CustomField>