force-app/main/default/objects/Event_Details__c/fields/ExternaliD__c.field-meta.xml
<CustomField>
    <fullName>ExternaliD__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>