force-app/main/default/objects/Event_Details__c/fields/Faith_Goal__c.field-meta.xml
<CustomField>
    <fullName>Faith_Goal__c</fullName>
    <label>Faith Goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>