force-app/main/default/objects/Event_Details__c/fields/FL_Discounted_Room_Cost__c.field-meta.xml
<CustomField>
    <fullName>FL_Discounted_Room_Cost__c</fullName>
    <label>Negotiated Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>