force-app/main/default/objects/Event_Details__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <description>Field Label changed on 11/10/21 per Mike Cogan&apos;s email request to Pete O.  Left api name unchanged so the flows continue to operate correctly.</description>
    <label>Project ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>