force-app/main/default/objects/Event_Details__c/fields/GL_Dept__c.field-meta.xml
<CustomField>
    <fullName>GL_Dept__c</fullName>
    <label>GL Dept</label>
    <length>10</length>
    <type>Text</type>
</CustomField>