force-app/main/default/objects/Event_Details__c/fields/Grow_in_Oneness__c.field-meta.xml
<CustomField>
    <fullName>Grow_in_Oneness__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Grow in Oneness</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>