force-app/main/default/objects/Event_Details__c/fields/Holy_Spirit_Actual__c.field-meta.xml
<CustomField>
    <fullName>Holy_Spirit_Actual__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of attendees that prayed to be filled with the Holy Spirit</description>
    <inlineHelpText>How many attendees prayed to be filled with the Holy Spirit at this event?</inlineHelpText>
    <label>Holy Spirit Actual</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>