force-app/main/default/objects/Event_Details__c/fields/Honorarium_Processed__c.field-meta.xml
<CustomField>
    <fullName>Honorarium_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Honorarium Processed</label>
    <type>Checkbox</type>
</CustomField>