force-app/main/default/objects/Event_Details__c/fields/Hotel_Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Account_Phone__c</fullName>
    <formula>Hotel_Location__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Account Phone</label>
    <type>Text</type>
</CustomField>