force-app/main/default/objects/Event_Details__c/fields/Hotel_Location__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location of the hotel associated with the event</description>
    <inlineHelpText>Account Business that is normally the same as the Event Location, but it is specific to sleeping rooms. So if the Hotel with Sleeping rooms is at a different Business account that would be noted here.</inlineHelpText>
    <label>Hotel Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>012i0000000xEz5AAE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Details (Hotel Location)</relationshipLabel>
    <relationshipName>Event_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>