force-app/main/default/objects/Event_Details__c/fields/Hotel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Phone__c</fullName>
    <label>Hotel Phone</label>
    <type>Phone</type>
</CustomField>