force-app/main/default/objects/Event_Details__c/fields/Hotel_Type__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Type__c</fullName>
    <formula>Text(Hotel_Location__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Type</label>
    <type>Text</type>
</CustomField>