force-app/main/default/objects/Event_Details__c/fields/Indicated_Decision_Actual__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Decision_Actual__c</fullName>
    <description># of attendees that checked &quot;Salvation&quot; on the conference evaluation</description>
    <inlineHelpText>How many attendees indicated &quot;Salvation&quot; on their eval form?</inlineHelpText>
    <label>Indicated Decision Actual</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>