force-app/main/default/objects/Event_Details__c/fields/Inside_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Inside_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inside Delivery</label>
    <type>Checkbox</type>
</CustomField>