force-app/main/default/objects/Event_Details__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <label>Contract Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>