force-app/main/default/objects/Event_Details__c/fields/Inv_Loc__c.field-meta.xml
<CustomField>
    <fullName>Inv_Loc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inv Loc</label>
    <type>Checkbox</type>
</CustomField>