force-app/main/default/objects/Event_Details__c/fields/Inv_Location_Exists__c.field-meta.xml
<CustomField>
    <fullName>Inv_Location_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inv Location Exists</label>
    <type>Checkbox</type>
</CustomField>